@@ -1,3 +1,11 @@
+2021-06-13  Boruch Baum  <boruch_baum@gmx.com>
+
+	* diredc.el (diredc-wdired): Add helpful message for edit mode.
+
+2021-06-13  Boruch Baum  <boruch_baum@gmx.com>
+
+	* diredc.el (diredc--hook-function): Remap faces buffer-locally.
+
 2021-06-09  Boruch Baum  <boruch_baum@gmx.com>
 
 	* diredc.el (diredc--advice--repeat-over-lines, diredc-mode): Fix
